deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengist
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: opengist
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opengist
    spec:
      containers:
        - name: opengist
          image: ghcr.io/thomiceli/opengist
          ports:
            - name: http
              containerPort: 6157
            - name: ssh
              containerPort: 2222
          volumeMounts:
            - mountPath: /opengist
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: opengist-data
