deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opengist
  labels:
    app.kubernetes.io/name: opengist
spec:
  selector:
    app.kubernetes.io/name: opengist
  ports:
    - port: 80
      targetPort: http
      name: http
