deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengist
  labels:
    app.kubernetes.io/name: opengist
    app.kubernetes.io/component: ingress
spec:
  rules:
    - host: opengist.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: opengist
                port:
                  name: http
